# liilend

./: .env.example  .gitignore  Anchor.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
app/: package-lock.json  package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: AssetCard.tsx  HealthFactorMeter.tsx  Navbar.tsx  WalletButton.tsx
app/src/hooks/: useProgram.ts
app/src/lib/: fiat.ts  idl.ts  onramp.ts  oracle.ts  protocol.ts  risk-oracle.ts
app/src/types/: index.ts
app/src/utils/: constants.ts
backend/: .env.example  package-lock.json  package.json
backend/scripts/: check-supabase-schema.ts
backend/src/: index.ts
backend/src/config/: index.ts  liilend-idl.json  logger.ts
backend/src/middleware/: auth.ts
backend/src/routes/: api.ts
backend/src/services/: fx-service.ts  indexer.ts  liquidation-monitor.ts  (+1 more)
docs/: ARCHITECTURE.md
programs/liilend/: Cargo.toml
programs/liilend/src/: errors.rs  lib.rs  state.rs
programs/liilend/src/cpi/: marginfi_adapter.rs  mod.rs  save_adapter.rs
programs/liilend/src/instructions/: admin.rs  borrow.rs  configure_asset.rs  deposit.rs  init_protocol.rs  liquidate.rs  mod.rs  repay.rs  set_price_feed.rs  treasury_ops.rs  withdraw.rs
programs/liilend/src/utils/: math.rs  mod.rs  safe_math.rs  share_math.rs
scripts/: airdrop-devnet.ts  constants.ts  deploy-devnet.sh  initialize-protocol.ts  mint-more-tokens.ts  seed-vaults.ts  setup-test-wallets.ts  test-devnet.ts  verify-deployment.ts
tests/: liilend.ts  tsconfig.json
(+5 files in other folders)
