[package]
name = "liilend"
version = "0.1.0"
description = "LiiLend - Crypto-collateralized borrowing for emerging markets"
edition = "2021"

[lib]
name = "liilend"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token"] }
bytemuck = { version = "1.21.0", features = ["derive", "min_const_generics"] }
num-derive = "0.4"
num-traits = "0.2"
uint = "0.10"
